--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,8 @@
 fastapi==0.109.2
 uvicorn==0.27.1
+asyncpg==0.29.0
+SQLAlchemy==2.0.27
+alembic==1.13.1
+pydantic==2.6.2
+pydantic-settings==2.2.1
+psycopg2-binary==2.9.9
