--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,6 @@ alembic==1.13.1
 pydantic==2.6.2
 pydantic-settings==2.2.1
 psycopg2-binary==2.9.9
+python-multipart==0.0.9
+pandas==2.2.1
+openpyxl==3.1.2
