create-front-container

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -18,7 +18,9 @@ services:
       timeout: 5s
       retries: 5
   api:
-    build: .
+    build:
+      context: app
+      dockerfile: Dockerfile
     depends_on:
       db:
         condition: service_healthy
@@ -28,5 +30,13 @@ services:
       - "8000:8000"
     environment:
       - DB_URL=postgresql+asyncpg://${PG_USER}:${PG_PASSWORD}@db:${DB_PORT}/${PG_INSTANCE}
+  front:
+    build:
+      context: front
+      dockerfile: Dockerfile
+    ports:
+      - "3000:3000"
+    environment:
+      - REACT_APP_API_URL=http://localhost:8000
 volumes:
   pgdata:
