--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -10,7 +10,7 @@ WORKDIR /app
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-# copy project
+# copy project - running from app context
 COPY . .
 
 CMD [ "uvicorn", "app.main:app", "--host", "0.0.0.0" ]
