JWT authentication added. App set to reload whenever code changes for dev purposes. Commented frontend docker build as currently it takes forever to execute

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -13,4 +13,4 @@ RUN pip install --no-cache-dir -r requirements.txt
 # copy project - running from app context
 COPY . .
 
-CMD [ "uvicorn", "app.main:app", "--host", "0.0.0.0" ]
+CMD [ "uvicorn", "app.main:app", "--host", "0.0.0.0", "--reload" ]
