--- a/front/neuro/package.json
+++ b/front/neuro/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "neuro",
+  "name": "matui",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@mantine/core": "^7.6.1",
-    "@mantine/dropzone": "^7.6.1",
-    "@mantine/form": "^7.6.1",
-    "@mantine/hooks": "^7.6.1",
-    "@mantine/modals": "^7.6.1",
-    "@mantine/notifications": "^7.6.1",
+    "@babel/plugin-proposal-private-property-in-object": "^7.16.7",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.15.11",
+    "@mui/lab": "^5.0.0-alpha.166",
+    "@mui/material": "^5.15.11",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
