JWT secrets are now taken from .env file

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -13,4 +13,11 @@ RUN pip install --no-cache-dir -r requirements.txt
 # copy project - running from app context
 COPY . .
 
+ARG JWT_SECRET_KEY
+ENV JWT_SECRET_KEY=${JWT_SECRET_KEY}
+
+ARG JWT_REFRESH_SECRET_KEY
+ENV JWT_REFRESH_SECRET_KEY=${JWT_REFRESH_SECRET_KEY}
+
+
 CMD [ "uvicorn", "app.main:app", "--host", "0.0.0.0", "--reload" ]
