fixed wrongly merged docker-compose

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -33,7 +33,7 @@ services:
     ports:
       - "8000:8000"
     environment:
-      - DB_URL: postgresql+asyncpg://${PG_USER}:${PG_PASSWORD}@db:${DB_PORT}/${PG_INSTANCE}
+      DB_URL: postgresql+asyncpg://${PG_USER}:${PG_PASSWORD}@db:${DB_PORT}/${PG_INSTANCE}
   front:
     build:
       context: front
