added automatic admin user creation

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -19,5 +19,10 @@ ENV JWT_SECRET_KEY=${JWT_SECRET_KEY}
 ARG JWT_REFRESH_SECRET_KEY
 ENV JWT_REFRESH_SECRET_KEY=${JWT_REFRESH_SECRET_KEY}
 
+ARG ADMIN_USERNAME
+ENV ADMIN_USERNAME=${ADMIN_USERNAME}
+
+ARG ADMIN_PASSWORD
+ENV ADMIN_PASSWORD=${ADMIN_PASSWORD}
 
 CMD [ "uvicorn", "app.main:app", "--host", "0.0.0.0", "--reload" ]
